--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-579.0KB/s(Youtube:不良林), server: 120.241.236.218, port: 16216, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-226.4KB/s(Youtube:不良林), server: 134.195.196.89, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇨🇳 中国-530.7KB/s(Youtube:不良林), server: 120.241.236.216, port: 16246, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-378.9KB/s(Youtube:不良林), server: 38.121.43.65, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇨🇦 加拿大-1.74MB/s(Youtube:不良林), server: 134.195.196.89, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇯🇵 日本-169.6KB/s(Youtube:不良林), server: 85.208.108.93, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇨🇳 中国-647.3KB/s(Youtube:不良林), server: 120.241.236.113, port: 16114, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-367.2KB/s(Youtube:不良林), server: 120.241.236.113, port: 16247, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-399.0KB/s(Youtube:不良林), server: 120.241.236.216, port: 16112, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-2.96MB/s(Youtube:不良林), server: 134.195.196.89, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
   - {name: 🇨🇦 加拿大-714.8KB/s(Youtube:不良林), server: 134.195.196.89, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇨🇦 加拿大-1.23MB/s(Youtube:不良林), server: 134.195.196.89, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
   - {name: 🇨🇦 加拿大-346.0KB/s(Youtube:不良林), server: 134.195.196.89, port: 3389, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-579.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-226.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-530.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-378.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.74MB/s(Youtube:不良林)
+      - 🇯🇵 日本-169.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-647.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-367.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-399.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.96MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-714.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.23MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-346.0KB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-579.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-226.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-530.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-378.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.74MB/s(Youtube:不良林)
+      - 🇯🇵 日本-169.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-647.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-367.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-399.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.96MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-714.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.23MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-346.0KB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-579.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-226.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-530.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-378.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.74MB/s(Youtube:不良林)
+      - 🇯🇵 日本-169.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-647.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-367.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-399.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.96MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-714.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.23MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-346.0KB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-579.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-226.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-530.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-378.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.74MB/s(Youtube:不良林)
+      - 🇯🇵 日本-169.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-647.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-367.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-399.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.96MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-714.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.23MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-346.0KB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-579.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-226.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-530.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-378.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.74MB/s(Youtube:不良林)
+      - 🇯🇵 日本-169.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-647.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-367.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-399.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.96MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-714.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.23MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-346.0KB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-579.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-226.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-530.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-378.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.74MB/s(Youtube:不良林)
+      - 🇯🇵 日本-169.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-647.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-367.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-399.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.96MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-714.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.23MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-346.0KB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-579.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-226.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-530.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-378.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.74MB/s(Youtube:不良林)
+      - 🇯🇵 日本-169.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-647.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-367.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-399.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.96MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-714.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.23MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-346.0KB/s(Youtube:不良林)
