--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-325.0KB/s(Youtube:不良林), server: 120.233.150.132, port: 16213, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-9.37MB/s(Youtube:不良林), server: sz-cm-kl.hinetwork.tw, port: 11180, type: trojan, password: 258f1db1-a4bc-3cab-ac7b-0ebc681c0580, sni: sz-cm-kl.hinetwork.tw, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-975.2KB/s(Youtube:不良林), server: 38.143.66.20, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇨🇦 加拿大-1.41MB/s(Youtube:不良林), server: 134.195.196.89, port: 8009, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
-  - {name: 🇨🇳 中国-367.2KB/s(Youtube:不良林), server: 120.241.236.113, port: 16247, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇨🇦 加拿大-217.8KB/s(Youtube:不良林), server: 134.195.196.89, port: 3389, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇨🇦 加拿大-660.5KB/s(Youtube:不良林), server: 134.195.196.89, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇨🇦 加拿大-917.5KB/s(Youtube:不良林), server: 134.195.196.89, port: 8091, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
-  - {name: 🇨🇦 加拿大-247.2KB/s(Youtube:不良林), server: 196.247.59.154, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇦 加拿大-496.8KB/s(Youtube:不良林), server: 196.247.59.154, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-432.2KB/s(Youtube:不良林), server: 120.233.29.168, port: 16256, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-370.1KB/s(Youtube:不良林), server: 120.241.236.113, port: 16215, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-152.4KB/s(Youtube:不良林), server: 134.195.196.89, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇨🇳 中国-197.2KB/s(Youtube:不良林), server: 120.241.236.216, port: 16246, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-305.1KB/s(Youtube:不良林), server: best03.downloadmovie.cn, port: 65088, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best03.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-374.1KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65091, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-490.1KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-215.7KB/s(Youtube:不良林), server: v6.heduian.online, port: 30866, type: vmess, uuid: cbb3f877-d1fb-344c-87a9-d153bffd5484, alterId: 2, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /oooo, ws-headers: {Host: v6.heduian.online}}
+  - {name: 🇺🇸 美国-842.4KB/s(Youtube:不良林), server: 38.121.43.65, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-325.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-975.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.41MB/s(Youtube:不良林)
-      - 🇨🇳 中国-367.2KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-217.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-660.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-917.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-247.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-496.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-432.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-370.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-152.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-197.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-305.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-374.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-490.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-215.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-842.4KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-325.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-975.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.41MB/s(Youtube:不良林)
-      - 🇨🇳 中国-367.2KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-217.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-660.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-917.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-247.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-496.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-432.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-370.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-152.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-197.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-305.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-374.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-490.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-215.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-842.4KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-325.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-975.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.41MB/s(Youtube:不良林)
-      - 🇨🇳 中国-367.2KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-217.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-660.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-917.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-247.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-496.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-432.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-370.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-152.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-197.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-305.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-374.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-490.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-215.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-842.4KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-325.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-975.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.41MB/s(Youtube:不良林)
-      - 🇨🇳 中国-367.2KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-217.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-660.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-917.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-247.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-496.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-432.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-370.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-152.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-197.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-305.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-374.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-490.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-215.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-842.4KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-325.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-975.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.41MB/s(Youtube:不良林)
-      - 🇨🇳 中国-367.2KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-217.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-660.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-917.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-247.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-496.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-432.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-370.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-152.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-197.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-305.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-374.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-490.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-215.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-842.4KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-325.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-975.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.41MB/s(Youtube:不良林)
-      - 🇨🇳 中国-367.2KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-217.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-660.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-917.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-247.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-496.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-432.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-370.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-152.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-197.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-305.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-374.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-490.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-215.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-842.4KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-325.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-975.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.41MB/s(Youtube:不良林)
-      - 🇨🇳 中国-367.2KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-217.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-660.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-917.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-247.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-496.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-432.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-370.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-152.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-197.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-305.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-374.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-490.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-215.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-842.4KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
