--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇦 加拿大-217.8KB/s(Youtube:不良林), server: 134.195.196.89, port: 3389, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇨🇳 中国-432.2KB/s(Youtube:不良林), server: 120.233.29.168, port: 16256, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-370.1KB/s(Youtube:不良林), server: 120.241.236.113, port: 16215, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-152.4KB/s(Youtube:不良林), server: 134.195.196.89, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇨🇳 中国-197.2KB/s(Youtube:不良林), server: 120.241.236.216, port: 16246, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-305.1KB/s(Youtube:不良林), server: best03.downloadmovie.cn, port: 65088, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best03.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-374.1KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65091, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-490.1KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-215.7KB/s(Youtube:不良林), server: v6.heduian.online, port: 30866, type: vmess, uuid: cbb3f877-d1fb-344c-87a9-d153bffd5484, alterId: 2, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /oooo, ws-headers: {Host: v6.heduian.online}}
+  - {name: 🇨🇦 加拿大-247.2KB/s(Youtube:不良林), server: 196.247.59.154, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇺🇸 美国-842.4KB/s(Youtube:不良林), server: 38.121.43.65, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇨🇳 中国-273.1KB/s(Youtube:不良林), server: 120.241.236.218, port: 16245, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-432.2KB/s(Youtube:不良林), server: 120.233.29.168, port: 16256, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-217.8KB/s(Youtube:不良林), server: 134.195.196.89, port: 3389, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇨🇦 加拿大-926.6KB/s(Youtube:不良林), server: 38.111.114.246, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
+  - {name: 🇺🇸 美国-438.1KB/s(Youtube:不良林), server: node-us-c-01.texo.network, port: 8443, type: trojan, password: 91fc891c-510f-3a1b-aa77-9bee2c759522, sni: node-us-c-01.texo.network, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-1.20MB/s(Youtube:不良林), server: 161.129.60.17, port: 25634, type: trojan, password: a2a37460-2a05-3211-b0d6-d0b37971f84e, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-300.5KB/s(Youtube:不良林), server: 120.241.236.218, port: 16246, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-377.4KB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-217.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-432.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-370.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-152.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-197.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-305.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-374.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-490.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-215.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-247.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-842.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-273.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-432.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-217.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-926.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-438.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-300.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-377.4KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇦 加拿大-217.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-432.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-370.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-152.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-197.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-305.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-374.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-490.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-215.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-247.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-842.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-273.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-432.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-217.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-926.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-438.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-300.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-377.4KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-217.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-432.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-370.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-152.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-197.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-305.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-374.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-490.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-215.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-247.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-842.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-273.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-432.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-217.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-926.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-438.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-300.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-377.4KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇦 加拿大-217.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-432.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-370.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-152.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-197.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-305.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-374.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-490.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-215.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-247.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-842.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-273.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-432.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-217.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-926.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-438.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-300.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-377.4KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-217.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-432.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-370.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-152.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-197.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-305.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-374.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-490.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-215.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-247.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-842.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-273.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-432.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-217.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-926.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-438.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-300.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-377.4KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-217.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-432.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-370.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-152.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-197.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-305.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-374.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-490.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-215.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-247.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-842.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-273.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-432.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-217.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-926.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-438.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-300.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-377.4KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-217.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-432.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-370.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-152.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-197.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-305.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-374.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-490.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-215.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-247.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-842.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-273.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-432.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-217.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-926.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-438.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-300.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-377.4KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
