--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-215.7KB/s(Youtube:不良林), server: v6.heduian.online, port: 30866, type: vmess, uuid: cbb3f877-d1fb-344c-87a9-d153bffd5484, alterId: 2, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /oooo, ws-headers: {Host: v6.heduian.online}}
-  - {name: 🇨🇳 中国-236.6KB/s(Youtube:不良林), server: best03.downloadmovie.cn, port: 65088, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best03.downloadmovie.cn}}
-  - {name: 🇺🇸 美国-438.1KB/s(Youtube:不良林), server: node-us-c-01.texo.network, port: 8443, type: trojan, password: 91fc891c-510f-3a1b-aa77-9bee2c759522, sni: node-us-c-01.texo.network, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-984.7KB/s(Youtube:不良林), server: 169.197.141.5, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇨🇳 中国-619.5KB/s(Youtube:不良林), server: 120.241.236.215, port: 16245, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-300.5KB/s(Youtube:不良林), server: 120.241.236.218, port: 16246, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇸🇬 新加坡-1.22MB/s(Youtube:不良林), server: bai-piao-wang-zhe12.98848.xyz, port: 36736, type: vmess, uuid: 50a9c98e-8c48-4680-feff-a7ea34705ae9, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ytryr6, ws-headers: {Host: bai-piao-wang-zhe12.98848.xyz}}
-  - {name: 🇨🇳 中国-1.88MB/s(Youtube:不良林), server: gz-cm1-kl.hinetwork.tw, port: 11176, type: trojan, password: 258f1db1-a4bc-3cab-ac7b-0ebc681c0580, sni: gz-cm1-kl.hinetwork.tw, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-315.6KB/s(Youtube:不良林), server: sz-cm-kl.hinetwork.tw, port: 11196, type: trojan, password: 258f1db1-a4bc-3cab-ac7b-0ebc681c0580, sni: sz-cm-kl.hinetwork.tw, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.71MB/s(Youtube:不良林), server: gz-cm-kl.hinetwork.tw, port: 11175, type: trojan, password: 258f1db1-a4bc-3cab-ac7b-0ebc681c0580, sni: gz-cm-kl.hinetwork.tw, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-305.8KB/s(Youtube:不良林), server: 120.241.236.216, port: 16214, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-438.1KB/s(Youtube:不良林), server: node-us-c-01.texo.network, port: 8443, type: trojan, password: 91fc891c-510f-3a1b-aa77-9bee2c759522, sni: node-us-c-01.texo.network, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-215.7KB/s(Youtube:不良林), server: v6.heduian.online, port: 30866, type: vmess, uuid: cbb3f877-d1fb-344c-87a9-d153bffd5484, alterId: 2, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /oooo, ws-headers: {Host: v6.heduian.online}}
   - {name: 🇨🇳 中国-7.85MB/s(Youtube:不良林), server: gz-cm1-kl.hinetwork.tw, port: 11174, type: trojan, password: 258f1db1-a4bc-3cab-ac7b-0ebc681c0580, sni: gz-cm1-kl.hinetwork.tw, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-379.8KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65073, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-343.6KB/s(Youtube:不良林), server: 36.134.156.5, port: 65040, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.156.5}}
+  - {name: 🇯🇵 日本-397.0KB/s(Youtube:不良林), server: 85.208.108.93, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 🇨🇦 加拿大-377.3KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-215.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-236.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-438.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-984.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-619.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-300.5KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.88MB/s(Youtube:不良林)
-      - 🇨🇳 中国-315.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-305.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-438.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-215.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-7.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-379.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-343.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-397.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-377.3KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-215.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-236.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-438.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-984.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-619.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-300.5KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.88MB/s(Youtube:不良林)
-      - 🇨🇳 中国-315.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-305.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-438.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-215.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-7.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-379.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-343.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-397.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-377.3KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-215.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-236.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-438.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-984.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-619.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-300.5KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.88MB/s(Youtube:不良林)
-      - 🇨🇳 中国-315.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-305.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-438.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-215.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-7.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-379.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-343.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-397.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-377.3KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-215.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-236.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-438.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-984.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-619.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-300.5KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.88MB/s(Youtube:不良林)
-      - 🇨🇳 中国-315.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-305.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-438.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-215.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-7.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-379.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-343.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-397.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-377.3KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-215.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-236.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-438.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-984.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-619.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-300.5KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.88MB/s(Youtube:不良林)
-      - 🇨🇳 中国-315.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-305.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-438.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-215.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-7.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-379.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-343.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-397.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-377.3KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-215.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-236.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-438.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-984.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-619.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-300.5KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.88MB/s(Youtube:不良林)
-      - 🇨🇳 中国-315.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-305.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-438.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-215.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-7.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-379.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-343.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-397.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-377.3KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-215.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-236.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-438.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-984.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-619.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-300.5KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.88MB/s(Youtube:不良林)
-      - 🇨🇳 中国-315.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-305.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-438.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-215.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-7.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-379.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-343.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-397.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-377.3KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
